--- a/.env
+++ b/.env
@@ -5,3 +5,17 @@ VITE_FIREBASE_STORAGE_BUCKET=ontrend-db.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=192511537789
 VITE_FIREBASE_APP_ID=1:192511537789:web:eefaa4402907571cf47714
 VITE_FIREBASE_MEASUREMENT_ID=G-K6KBX0PF4P
+
+# crypto-js
+VITE_ENCRYPTION_KEY=o1n1t1
+# google api
+VITE_GOOGLE_MAPS_API_KEY="AIzaSyAcEE-vXwPyOkwcPROiC3h17CdtJL8onKs"
+
+
+# VITE_FIREBASE_API_KEY=AIzaSyDSX0FqSQ2xLknIdDDepw_ejqQ3O6US4_g
+# VITE_FIREBASE_AUTH_DOMAIN=testlearn-7744.firebaseapp.com
+# VITE_FIREBASE_PROJECT_ID=testlearn-7744
+# VITE_FIREBASE_STORAGE_BUCKET=testlearn-7744.firebasestorage.app
+# VITE_FIREBASE_MESSAGING_SENDER_ID=830920965475
+# VITE_FIREBASE_APP_ID=1:830920965475:web:71c173f8f3ddd8547be756
+# VITE_FIREBASE_MEASUREMENT_ID=G-4NB642ZLXY
