--- a/package.json
+++ b/package.json
@@ -13,19 +13,29 @@
     "deploy": "gh-pages -d dist --git git"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.6",
+    "country-flag-emoji-json": "^2.0.0",
+    "country-list": "^2.3.0",
+    "crypto-js": "^4.2.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.0",
     "framer-motion": "^12.16.0",
+    "i18n-iso-countries": "^7.14.0",
+    "libphonenumber-js": "^1.12.9",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
