--- a/.env
+++ b/.env
@@ -9,7 +9,8 @@ VITE_FIREBASE_MEASUREMENT_ID=G-K6KBX0PF4P
 # crypto-js
 VITE_ENCRYPTION_KEY=o1n1t1
 # google api
-VITE_GOOGLE_MAPS_API_KEY="AIzaSyAcEE-vXwPyOkwcPROiC3h17CdtJL8onKs"
+# VITE_GOOGLE_MAPS_API_KEY="AIzaSyAcEE-vXwPyOkwcPROiC3h17CdtJL8onKs"
+VITE_GOOGLE_MAPS_API_KEY="AIzaSyDyPyWNSdXMAqwmlj9PcIpjRVRJb4ol5nQ"
 
 
 # VITE_FIREBASE_API_KEY=AIzaSyDSX0FqSQ2xLknIdDDepw_ejqQ3O6US4_g
