--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-select": "^5.10.1",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
