--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "firebase": "^11.9.0",
     "framer-motion": "^12.16.0",
     "i18n-iso-countries": "^7.14.0",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "libphonenumber-js": "^1.12.9",
     "localforage": "^1.10.0",
     "lucide-react": "^0.513.0",
@@ -37,6 +39,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
