--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-text-transition": "^3.1.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
