--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.17.0",
     "react-text-transition": "^3.1.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
