--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ VITE_ENCRYPTION_KEY=o1n1t1
 # google api
 # VITE_GOOGLE_MAPS_API_KEY="AIzaSyAcEE-vXwPyOkwcPROiC3h17CdtJL8onKs"
 VITE_GOOGLE_MAPS_API_KEY="AIzaSyDyPyWNSdXMAqwmlj9PcIpjRVRJb4ol5nQ"
+VITE_CRYPTO_SECRET="dnertno"
 
 
 # VITE_FIREBASE_API_KEY=AIzaSyDSX0FqSQ2xLknIdDDepw_ejqQ3O6US4_g
