--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.17.0",
     "react-text-transition": "^3.1.0",
+    "react-type-animation": "^3.2.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
