--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^2.50.3",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-query-devtools": "^5.80.7",
+    "antd": "^5.26.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-flag-emoji-json": "^2.0.0",
     "country-list": "^2.3.0",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.0",
     "framer-motion": "^12.16.0",
@@ -36,6 +39,8 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.57.0",
