--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "react-international-phone": "^4.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
